assignments/cat_template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
    Project-101 : Kittens Carousel Static Website deployed on AWS EC2 using Cloudformation
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
    ConstraintDescription: must be a valid EC2 instance type.
  AllowedIP:
    Description: The IP address range that can have access for ports 22 and 80
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  ImageId:
    Description: Image ID
    Type: String
    Default: ami-08f3d892de259504d
    
Resources:
  EC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      Tags: 
       - Key: Name
         Value: !Sub 'Web Server of ${AWS::StackName}'
      SecurityGroups:
        - !Ref InstanceSecurityGroup
      KeyName: !Ref KeyName
      ImageId: !Ref ImageId
      UserData:
        'Fn::Base64': !Sub |
          #!/bin/bash
          yum update -y
          yum install httpd -y
          chmod -R 777 /var/www/html
          cd /var/www/html
          wget https://raw.githubusercontent.com/mibraiym/AWS_Projects/master/101-kittens-carousel-static-website-ec2/static-web/cat0.jpg
          wget https://raw.githubusercontent.com/mibraiym/AWS_Projects/master/101-kittens-carousel-static-website-ec2/static-web/cat1.jpg
          wget https://raw.githubusercontent.com/mibraiym/AWS_Projects/master/101-kittens-carousel-static-website-ec2/static-web/cat2.jpg
          wget https://raw.githubusercontent.com/mibraiym/AWS_Projects/master/101-kittens-carousel-static-website-ec2/static-web/index.html
          systemctl start httpd
          systemctl enable httpd
           
  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22 and access to port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref AllowedIP
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref AllowedIP

Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref EC2Instance
  PublicDNS:
    Description: Public DNSName of the newly created EC2 instance
    Value: !GetAtt 
      - EC2Instance
      - PublicDnsName
  PublicIP:
    Description: Public IP address of the newly created EC2 instance
    Value: !GetAtt 
      - EC2Instance
      - PublicIp
